--- a/programs/zk-oracle-quest/Cargo.toml
+++ b/programs/zk-oracle-quest/Cargo.toml
@@ -19,17 +19,19 @@ idl-build = ["anchor-lang/idl-build", "light-sdk/idl-build"]
 
 [dependencies]
 anchor-lang = "0.31.1"
-light-sdk = { version = "0.13.0", features = ["anchor"] }
-light-hasher = { version = "3.1.0", features = ["solana"] }
-light-sdk-types = { version = "0.13.0" }
+light-hasher = { version = "5.0.0", features = ["solana"] }
+light-sdk = { version = "0.16.0", features = ["anchor", "v2"] }
+light-sdk-types = { version = "0.16.0", features = ["anchor", "v2"] }
+
+[dev-dependencies]
+light-client = { version = "0.16.0", features = ["v2"] }
+light-program-test = { version = "0.16.0", features = ["v2"] }
+solana-sdk = "2.2"
+tokio = "1.43.0"
+litesvm = "0.8"
 
 [target.'cfg(not(target_os = "solana"))'.dependencies]
 solana-sdk = "2.2"
-
-[dev-dependencies]
-light-client = { version = "0.13.0" }
-light-program-test = { version = "0.13.1" }
-tokio = "1.36.0"
 
 [lints.rust.unexpected_cfgs]
 level = "allow"
