--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [workspace]
-members = ["programs/*"]
+members = ["programs/simple-oracle-quest"]
+exclude = ["programs/zk-oracle-quest"]
 resolver = "2"
 
 [profile.release]
